dashboard changes and pspacing issues resolved

--- a/public/scss/base/responsive.scss
+++ b/public/scss/base/responsive.scss
@@ -137,7 +137,7 @@
     }
 
     .upper-title-box {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     .candidate-block-three {
