--- a/public/scss/components/dashboard.scss
+++ b/public/scss/components/dashboard.scss
@@ -322,7 +322,7 @@ Dashboard
 
 .dashboard .upper-title-box {
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .dashboard .upper-title-box h3 {
@@ -330,7 +330,7 @@ Dashboard
   font-size: 30px;
   line-height: 41px;
   color: #202124;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .ui-item {
